Removed border and added cursor property to search button

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,8 +61,9 @@ p {
   .btn-search {
     background-color: #2A9D8F;
     color: #fff;
+    border: none;
+    cursor: pointer;
   }
-
 }
 
 /* Book */
