--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #264653;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
 }
 
 .container {
