--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,9 @@ p {
   margin-right: 0;
 }
 
-.book__title {
-  font-size: 2rem;
+.book__link {
+  text-decoration: none;
+  color: #2A9D8F;
 }
 
 .book__image {
@@ -96,17 +97,11 @@ p {
   .book {
     margin-right: 0;
   }
-  .book__title {
-    font-size: 1.5rem;
-  }
 }
 
 @media (max-width: 400px) {
   #form__search {
     margin-bottom: 1rem;
-  }
-  .book__title {
-    font-size: 1.3rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
